[package]
name = "AsyncElevator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wutil = { git = "https://github.com/wyhhh/wutil.git"}
crossbeam = "0.8.1"
work-queue = "0.1.3"
crossbeam-utils = "0.8.8"
futures = "0.3"